correction of colors in the header links
added color to links in the header

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,7 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  color: var(--primary-text-color-dark);
 }
 .nav-list-links:hover,
 .nav-list-links:focus {
@@ -110,6 +111,7 @@ body {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  color: var(--primary-text-color-dark);
 }
 
 .logo-fpart {
